# OTUS_CPP_PROF

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  auto_ex01.cpp  ip_srt_c.cpp  ip_srt_lib.c  ip_srt_lib.h  main.cpp  tuple_ex01.cpp
.github/workflows/: release.yml
answers_for_auto_tuple/: auto_ex02.cpp
ip_sort/: Makefile  ip_srt_c.cpp  ip_srt_lib.c  ip_srt_lib.h  list.txt  script.sh  script_full.sh
sources review/: CMakeLists.txt  auto.cpp  decltype.cpp  lambda.cpp  pretty.h
